--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,22 +1,34 @@
-@(content: Html)
+@(user: Option[String])(content: Html)
 
 <!DOCTYPE html>
 
 <html>
   <head>
       <!-- Title -->
-    <title>@Messages("application.name")</title>
+    @if(user) {
+      <title>@user | @Messages("application.name")</title>
+    } else {
+      <title>@Messages("application.name")</title>
+    }
 
       <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("../assets/images/favicon.png")">
+    <link rel="shortcut icon" type="image/png"
+    href="@routes.Assets.at("../assets/images/favicon.png")">
+
+      <!-- Font -->
+    <link rel='stylesheet' type='text/css'
+    href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' >
 
       <!-- Stylesheet -->
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+    <link rel="stylesheet" media="screen"
+    href="@routes.Assets.at("stylesheets/chat.min.css")">
 
       <!-- Script -->
-    <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/chat.js")" type="text/javascript"></script>
-  </head>
+    <script type='text/javascript'
+    src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
+    <script type="text/javascript"
+    src="@routes.Assets.at("javascripts/chat.js")" ></script>
+    </head>
   <body>
   @content
   </body>
