--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,8 +2,7 @@
 
 @main(None) {
 
-  <h1>@Messages("application.name")</h1>
-  <p>Welcome to PlayChat!</p>
-  @es.getOrElse("")
+  <div class="div-msg">Welcome to PlayChat!</div>
+  <div class="div-msg">@es.getOrElse("")</div>
 
 }
