--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -1,12 +1,29 @@
-$font-family: 'Raleway', sans-serif;
-$primary-color: #000000;
+@import 'utils/colors';
+@import 'utils/dimens';
+@import 'utils/fonts';
+@import 'components/bottom-sheet';
+@import 'components/msg';
+@import 'components/button';
+@import 'structures/toolbar';
 
 body {
   font-family: $font-family;
-  font-weight: 300;
-  color: black;
+  color: $black;
+  font-size: 14px;
+  margin: 0;
+  padding: 0px;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  background-color: $grey-lighten-2;
 }
 
-h1 {
-  color: blue;
+h1, h2, h3, h4, h5 {
+  color: $lightBlue;
+}
+
+span {
+  display: inline-block;
+  vertical-align: middle;
+
+  line-height: normal;
 }
