Add new favicon

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -42,11 +42,14 @@
 
       <!-- Toolbar -->
     <div class="toolbar">
-      <span>
-        <h1>
-          <a href="/">@Messages("application.name")</a>
-        </h1>
-      </span>
+      <a href="/">
+        <img src="@routes.Assets.at("../assets/images/favicon.png")" width="80px" height="80px">
+        <span>
+          <h1>
+          @Messages("application.name")
+          </h1>
+        </span>
+      </a>
     </div>
 
       <!-- Bottom sheet -->
