Add favicon_white; update stylesheets

--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -1,17 +1,17 @@
 @import 'utils/colors';
 @import 'utils/dimens';
 @import 'utils/fonts';
-@import 'components/bottom-sheet';
-@import 'components/msg';
-@import 'components/button';
 @import 'structures/toolbar';
+@import 'components/bottom-sheet';
+@import 'components/button';
+@import 'components/msg';
 
 body {
   font-family: $font-family;
   color: $black;
   font-size: 14px;
   margin: 0;
-  padding: 0px;
+  padding: 0;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   background-color: $grey-lighten-2;
@@ -19,13 +19,6 @@ body {
 
 h1, h2, h3, h4, h5 {
   color: $lightBlue;
-}
-
-span {
-  display: inline-block;
-  vertical-align: middle;
-
-  line-height: normal;
 }
 
 a:link {
@@ -49,4 +42,24 @@ a:hover {
 a:active {
   color: $lightBlue;
   text-decoration: none;
+}
+
+@media screen and (min-width: 0px) and (max-width: 800px) {
+  .bottom_sheet_background {
+    bottom: -200px;
+    right: -200px;
+  }
+  .toolbar {
+    span {
+      //visibility: hidden;
+      display: none;
+    }
+  }
+}
+
+@media screen and (min-width: 801px) {
+  .bottom_sheet_background {
+    bottom: -120px;
+    right: -120px;
+  }
 }
