--- a/app/assets/stylesheets/components/_bottom-sheet.scss
+++ b/app/assets/stylesheets/components/_bottom-sheet.scss
@@ -1,7 +1,19 @@
+//
 // Bottom sheet
+//
 
 .bottom-sheet {
   padding: $bottom-sheet-padding;
-  height: $bottom-sheet-height;
   width: $bottom-sheet-width;
+  margin: 0 auto;
+  z-index: 0;
+  position: absolute;
+  left: -50;
+  top: 150px;
+}
+
+.bottom_sheet_background {
+  background-color: $grey-lighten-2;
+  position: fixed;
+  z-index: -1;
 }
