--- a/app/assets/stylesheets/components/_msg.scss
+++ b/app/assets/stylesheets/components/_msg.scss
@@ -1,6 +1,8 @@
+//
 // Msg
+//
 
-input {
+input[type=text] {
   padding: $input-padding;
   margin: $input-margin;
   border: $input-border;
@@ -12,10 +14,21 @@ input:focus {
   outline: 0;
 }
 
-.div-msgs-input {
+#div-msgs-input {
+  background-color: $white;
   padding: $div-msgs-input-padding-tb $div-msgs-input-padding-lr;
   border-top: $div-msgs-input-border-tb;
   border-bottom: $div-msgs-input-border-tb;
+}
+
+#div-msgs-input.stick {
+  background-color: $white;
+  padding: $div-msgs-input-padding-tb $div-msgs-input-padding-lr;
+  border-top: none;
+  border-bottom: $div-msgs-input-border-tb;
+  position: fixed;
+  width: 100%;
+  top: 0;
 }
 
 .div-msgs {
@@ -26,6 +39,8 @@ input:focus {
   background-color: $white;
   padding: $div-msg-padding-tb $div-msg-padding-lr;
   margin: $div-msg-margin-tb $div-msg-margin-lr;
+  z-index: 1;
+  box-shadow: 0 2px 4px $grey;
 }
 
 #div-error {
@@ -33,4 +48,5 @@ input:focus {
   padding: $div-msg-padding-tb $div-msg-padding-lr;
   margin: $div-msg-margin-tb $div-msg-margin-lr;
   color: $red;
+  box-shadow: 0 2px 4px $grey;
 }
