--- a/app/assets/stylesheets/structures/_toolbar.scss
+++ b/app/assets/stylesheets/structures/_toolbar.scss
@@ -1,11 +1,19 @@
 // Toolbar
 
 .toolbar {
-  vertical-align: middle;
+  display: block;
+  vertical-align: bottom;
   background-color: $white;
-  padding: $toolbar-padding;
+  padding: $toolbar-padding-tb $toolbar-padding-lr;
   height: $toolbar-height;
   border: none;
-  line-height: 100px;
-  text-align: center;
+  text-align: left;
+  z-index: 2;
+  box-shadow: 0 4px 8px $grey;
+
+  span {
+    display: inline-block;
+    vertical-align: baseline;
+    line-height: normal;
+  }
 }
