--- a/app/assets/stylesheets/utils/_dimens.scss
+++ b/app/assets/stylesheets/utils/_dimens.scss
@@ -9,8 +9,9 @@ $bottom-sheet-padding: 0px;
 
 // Toolbar
 $toolbar-height: 110px;
-$toolbar-width: 100px;
-$toolbar-padding: 16px;
+$toolbar-width: 100%;
+$toolbar-padding-tb: 14px;
+$toolbar-padding-lr: 10px;
 
 // Botton
 $button-padding: 8px;
