--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -2,7 +2,8 @@
 
 @main(Some(user)) {
 
-  <div class="div-msgs-input">
+  <div id="sticky-anchor"></div>
+  <div id="div-msgs-input">
     <form id="chat">
       <input type="text" id="msg" placeholder="What's happening?">
       <button type="submit" id="submit">Send</button>
