--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -36,8 +36,8 @@
 
       <!-- Reactive ribbon -->
     <a href="http://www.reactivemanifesto.org/">
-      <img style="border : 0 ; position : fixed ; left : 0 ; top : 0 ; z-index : 9000"
-      src="//d379ifj7s9wntv.cloudfront.net/reactivemanifesto/images/ribbons/we-are-reactive-white-left.png">
+      <img style="border : 0 ; position : fixed ; right : 0 ; top : 0 ; z-index : 9000"
+      src="//d379ifj7s9wntv.cloudfront.net/reactivemanifesto/images/ribbons/we-are-reactive-white-right.png">
     </a>
 
       <!-- Toolbar -->
@@ -55,6 +55,10 @@
       <!-- Bottom sheet -->
     <div class="bottom-sheet">
     @content
+    </div>
+
+    <div class="bottom_sheet_background">
+      <img src="@routes.Assets.at("../assets/images/favicon_white.png")">
     </div>
 
   </body>
