Edit stylesheets, routes; add login, signup, global

--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -5,6 +5,7 @@
 @import 'components/bottom-sheet';
 @import 'components/button';
 @import 'components/msg';
+@import 'components/user';
 
 body {
   font-family: $font-family;
