--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -1,25 +1,25 @@
 @(user: String)(implicit request: RequestHeader)
 
-@main(Some(user)) {
+  @main(Some(user)) {
 
-  <div id="sticky-anchor"></div>
-  <div id="div-msgs-input">
-    <form id="chat">
-      <input type="text" id="msg" placeholder="What's happening?">
-      <button type="submit" id="submit">Send</button>
-    </form>
-  </div>
+    <div id="sticky-anchor"></div>
+    <div id="div-msgs-input">
+      <form id="chat">
+        <input type="text" id="msg" placeholder="What's happening?">
+        <button type="submit" id="submit">Send</button>
+      </form>
+    </div>
 
-  <div id="div-error">
-    Empty message?!
-  </div>
+    <div id="div-error">
+      Empty message?!
+    </div>
 
-  <div class="div-msgs" id="msgs"></div>
+    <div class="div-msgs" id="msgs"></div>
 
-  <script type="text/javascript">
+    <script type="text/javascript">
     $(function () {
       // Create a new websocket
-      ws = new WebSocket("@routes.Chat.chatSocket(user).webSocketURL()")
+      ws = new WebSocket("@routes.Chats.chatSocket(user).webSocketURL()")
 
       // Add the received msg from the websocket to the screen
       ws.onmessage = function (msg) {
@@ -42,4 +42,4 @@
     })
   </script>
 
-}
+  }
