--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(user: Option[String])(content: Html)
+@(username: Option[String])(content: Html)
 
 <!DOCTYPE html>
 
@@ -8,35 +8,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <!-- Title -->
-    @if(user) {
-      <title>@user | @Messages("application.name")</title>
+    @if(username) {
+      <title>@username | @Messages("application.name")</title>
     } else {
       <title>@Messages("application.name")</title>
     }
 
-      <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png"
-    href="@routes.Assets.at("../assets/images/favicon.png")">
+        <!-- Favicon -->
+      <link rel="shortcut icon" type="image/png"
+      href="@routes.Assets.at("../assets/images/favicon.png")">
 
-      <!-- Font -->
-    <link rel='stylesheet' type='text/css'
-    href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' >
+        <!-- Font -->
+      <link rel='stylesheet' type='text/css'
+      href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' >
 
-      <!-- Stylesheet -->
-    <link rel="stylesheet" media="screen"
-    href="@routes.Assets.at("stylesheets/chat.min.css")">
+        <!-- Stylesheet -->
+      <link rel="stylesheet" media="screen"
+      href="@routes.Assets.at("stylesheets/chat.min.css")">
 
-      <!-- Script -->
-    <script type='text/javascript'
-    src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
-    <script type="text/javascript"
-    src="@routes.Assets.at("javascripts/chat.js")" ></script>
+        <!-- Script -->
+      <script type='text/javascript'
+      src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
+      <script type="text/javascript"
+      src="@routes.Assets.at("javascripts/chat.js")" ></script>
     </head>
   <body>
 
       <!-- Reactive ribbon -->
     <a href="http://www.reactivemanifesto.org/">
-      <img style="border : 0 ; position : fixed ; right : 0 ; top : 0 ; z-index : 9000"
+      <img style="border : 0 ; position : fixed ; right : 0 ; top : 0 ; z-login : 9000"
       src="//d379ifj7s9wntv.cloudfront.net/reactivemanifesto/images/ribbons/we-are-reactive-white-right.png">
     </a>
 
@@ -50,6 +50,10 @@
           </h1>
         </span>
       </a>
+
+      @if(username) {
+          &#64;@username
+      }
     </div>
 
       <!-- Bottom sheet -->
@@ -57,6 +61,7 @@
     @content
     </div>
 
+      <!-- Bottom sheet background -->
     <div class="bottom_sheet_background">
       <img src="@routes.Assets.at("../assets/images/favicon_white.png")">
     </div>
