--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -5,7 +5,6 @@
 @import 'components/bottom-sheet';
 @import 'components/button';
 @import 'components/msg';
-@import 'components/user';
 
 body {
   font-family: $font-family;
@@ -13,6 +12,8 @@ body {
   font-size: 14px;
   margin: 0;
   padding: 0;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
   background-color: $grey-lighten-2;
 }
 
